--- a/Android_Labyrinth/app/src/main/AndroidManifest.xml
+++ b/Android_Labyrinth/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="ch.fhnw.android_labyrinth">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:allowBackup="true"
