--- a/Android_Labyrinth/app/src/main/AndroidManifest.xml
+++ b/Android_Labyrinth/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <!--<uses-feature android:name="android.hardware.sensor.accelerometer" android:required="true" />-->
 
     <application
         android:allowBackup="true"
@@ -22,7 +25,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.MainActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
+            android:screenOrientation="landscape">
 
             <intent-filter>
                 <action android:name="ch.fhnw.android_labyrinth.MainActivity" />
