--- a/Android_Labyrinth/app/src/main/AndroidManifest.xml
+++ b/Android_Labyrinth/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         </activity>
         <activity android:name=".activity.MainActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
-            android:screenOrientation="landscape">
+            android:screenOrientation="portrait">
 
             <intent-filter>
                 <action android:name="ch.fhnw.android_labyrinth.MainActivity" />
